# next

- That smooth moving volume slider. You don't need it. But you want it. You … *deserve* it! It's **yours** now. - But it's a filthy little liar. I'm telling you. Deceiving us all! Don't trust it.
- Only set the "host" config on mpc commands if it one is provided in the config

# 5.3

- Increases cursor visibility on currently paying item
- Adds page titles to some views
- Fixes keyboard navigation not working when switching to Queue view
- Fixes missing icons in breeze icon theme
- Better handling of missing songs in playlists
- Opens the app window a little bit taller if possible
- Layout tweaks

# 5.2

- Adds "action toolbar" on top of song-lists
- Replaces dedicated checkboxes with marker on cover
- Adds some keyboard navigation to the Queue:
    - Cursor position is shown by moving indicator between cover and text
    - Up/Down keys to move up and down
    - Up/Down+Shift to select items
    - Space to toggle selection downwards
    - Shift-D to clear the selection
    - B to select the album at the cursor (Shift+B for deselect)
    - Enter to play the selected song
- Adds some mouse actions to the Queue:
    - Single-Click to select a single song
    - Shift+Single-Click to select a range
    - Single-Click+Ctrl to select or deselect a single song
- Follow-mode changes:
    - Toggling Follow-mode manually moved to Shift+F
    - F jumps to the currently playing song
    - Making changes to the Queue disables Follow-mode for a short time
    - Fixes showing the same song with duplicate song in the Queue
- Adds Right-Click menu in Artists for whole artist-row
- Selects last loaded playlist in Queue's Replace Playlist dialog
- Fixes similar named albums ("Best of", "Greatest Hits") sharing the same cover (a)
- Fixes jumping to Queue with "1" shortcut sometimes needed two presses
- Reducing need to redraw the Queue after manipulating it
- Reduces memory usage

# 5.1
- Adds inserting songs after the currently playing queue item