@@ -7,12 +7,13 @@
             }
         ],
         "Category": "Multimedia",
-        "Description": "Shows and controls mpd instance.",
+        "Description": "Show information and control MPD",
         "Icon": "org.kde.plasma.mediacontroller",
         "Id": "com.siezi.plasma.mpdWidget",
         "Name": "MPD Plasma Widget",
         "Version": "5.3",
-        "Website": "https://www.pling.com/p/2086390"
+        "Website": "https://github.com/Schlaefer/mpd-plasma-widget",
+        "License": "GPLv3"
     },
     "X-Plasma-API": "declarativeappletscript",
     "X-Plasma-MainScript": "ui/main.qml",
