@@ -2,6 +2,7 @@
 
 - That smooth moving volume slider. You don't need it. But you want it. You … *deserve* it! It's **yours** now. - But it's a filthy little liar. I'm telling you. Deceiving us all! Don't trust it.
 - Only set the "host" config on mpc commands if it one is provided in the config
+- Reorganized widget configuration sections
 
 # 5.3
 
